--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,4 +22,13 @@
     <style name="Theme.Foods_secret.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Foods_secret.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="ThemeOverlay.AppCompat.navTheme">
+
+        <!-- Color of text and icon when SELECTED -->
+        <item name="colorPrimary">#0084f4</item>
+
+        <!-- Background color when SELECTED -->
+        <item name="colorControlHighlight">#90CAF9</item>
+
+    </style>
 </resources>
