--- a/app/src/main/res/layout/analyse_fragment.xml
+++ b/app/src/main/res/layout/analyse_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.select.SelectFragment">
+    tools:context=".ui.analyse.AnalyseFragment">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -23,20 +23,8 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/analyse_button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#EB8C8F"
-        android:text="分析搭配"
-        android:textSize="20sp"
-        app:cornerRadius="100dp"
-        app:icon="@drawable/ic_baseline_add_24"
-        app:iconSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
