--- a/app/src/main/res/layout/tag_fragment.xml
+++ b/app/src/main/res/layout/tag_fragment.xml
@@ -6,19 +6,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     tools:context=".ui.tag.TagFragment">
+
     <ImageView
+        android:id="@+id/imageView7"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="#ECCE5F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
 
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         >
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -76,13 +83,14 @@
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card2"
-                app:layout_constraintTop_toBottomOf="@id/card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="8dp"
                 app:cardCornerRadius="10dp"
-                android:layout_margin="8dp">
+                app:layout_constraintTop_toBottomOf="@id/card">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -93,8 +101,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="194dp"
-                        app:srcCompat="@drawable/img_2"
                         android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/img_2"
 
                         />
 
@@ -109,32 +117,31 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="豆类"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
-                            />
+                            android:textAppearance="?attr/textAppearanceHeadline6" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="点击查看分类详情"
                             android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="?android:attr/textColorSecondary"
-                            />
+                            android:textColor="?android:attr/textColorSecondary" />
 
 
                     </LinearLayout>
 
 
-
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/card2"
+                android:layout_margin="8dp"
                 app:cardCornerRadius="10dp"
-                android:layout_margin="8dp">
+                app:layout_constraintTop_toBottomOf="@id/card2">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -145,8 +152,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="194dp"
-                        app:srcCompat="@drawable/img_3"
                         android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/img_3"
 
                         />
 
@@ -161,32 +168,32 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="水果"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
-                            />
+                            android:textAppearance="?attr/textAppearanceHeadline6" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="点击查看分类详情"
                             android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="?android:attr/textColorSecondary"
-                            />
+                            android:textColor="?android:attr/textColorSecondary" />
 
 
                     </LinearLayout>
 
 
-
                 </LinearLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/card3"
+                android:layout_margin="8dp"
                 app:cardCornerRadius="10dp"
-                android:layout_margin="8dp">
+                app:layout_constraintTop_toBottomOf="@id/card3"
+                android:layout_marginBottom="12dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -197,8 +204,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="194dp"
-                        app:srcCompat="@drawable/img_4"
                         android:scaleType="centerCrop"
+                        app:srcCompat="@drawable/img_4"
 
                         />
 
@@ -213,20 +220,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="肉类"
-                            android:textAppearance="?attr/textAppearanceHeadline6"
-                            />
+                            android:textAppearance="?attr/textAppearanceHeadline6" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:text="点击查看分类详情"
                             android:textAppearance="?attr/textAppearanceBody2"
-                            android:textColor="?android:attr/textColorSecondary"
-                            />
-
+                            android:textColor="?android:attr/textColorSecondary" />
 
                     </LinearLayout>
-
 
 
                 </LinearLayout>
