--- a/app/src/main/res/layout/fruit_item.xml
+++ b/app/src/main/res/layout/fruit_item.xml
@@ -11,7 +11,7 @@
         android:layout_marginLeft="10dp"/>
 
     <TextView
-        android:id="@+id/fruitName"
+        android:id="@+id/foodName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
