--- a/app/src/main/res/layout/select_fragment.xml
+++ b/app/src/main/res/layout/select_fragment.xml
@@ -47,41 +47,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:buttonTint="#EB8C8F"
-                android:text="油条"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCheckBox2" />
-
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/materialCheckBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/select_view"
+                android:layout_width="290dp"
+                android:layout_height="155dp"
                 android:layout_marginTop="36dp"
-                android:buttonTint="#EB8C8F"
-                android:text="白粥"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
-            <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/materialCheckBox2"
-                android:layout_width="wrap_content"
 
-                android:layout_height="wrap_content"
-                android:buttonTint="#EB8C8F"
-                android:text="牛奶"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/materialCheckBox" />
+
 
             <ImageView
                 android:layout_width="297dp"
