添加食物具体摄入量

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,4 +31,9 @@
         <item name="colorControlHighlight">#90CAF9</item>
 
     </style>
+    <style name="MyEditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">#EB8C8F</item>
+        <item name="colorControlActivated">#EB8C8F</item>
+    </style>
+
 </resources>
