--- a/app/src/main/res/layout/select_fragment.xml
+++ b/app/src/main/res/layout/select_fragment.xml
@@ -49,25 +49,25 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/select_view"
-                android:layout_width="290dp"
-                android:layout_height="155dp"
+                android:layout_width="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="36dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
-
-
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                android:elevation="5dp"/>
 
 
             <ImageView
                 android:layout_width="297dp"
                 android:layout_height="373dp"
-                android:layout_marginTop="188dp"
+                android:layout_marginTop="236dp"
                 android:src="@drawable/ic_undraw_select_option_re_u4qn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.505"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView3"
+                android:elevation="1dp"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
