--- a/app/src/main/res/layout/tag_fragment.xml
+++ b/app/src/main/res/layout/tag_fragment.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginHorizontal="5dp"
         android:id="@+id/tagrecycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
