--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -2,15 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="195dp"
+    android:layout_width="match_parent"
+
     android:layout_height="wrap_content">
 
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
-        android:layout_width="181dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
 
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
